# dbt-ibmdb2

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  test.env  tox.ini
.github/workflows/: publish.yml  test.yml
db2/: setup_ssl.sh
dbt/adapters/ibmdb2/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/ibmdb2/: dbt_project.yml  sample_profiles.yml
dbt/include/ibmdb2/macros/: adapters.sql  apply_grants.sql  catalog.sql  indexes.sql
dbt/include/ibmdb2/macros/materializations/incremental/: helpers.sql  incremental.sql
dbt/include/ibmdb2/macros/materializations/seed/: seed.sql
dbt/include/ibmdb2/macros/materializations/seeds/: helpers.sql
dbt/include/ibmdb2/macros/materializations/snapshot/: snapshot.sql  snapshot_merge.sql  strategies.sql
dbt/include/ibmdb2/macros/materializations/table/: table.sql
dbt/include/ibmdb2/macros/materializations/view/: view.sql
dbt/include/ibmdb2/macros/utils/: datatypes.sql  dateadd.sql  datediff.sql  hash.sql  last_day.sql  position.sql  split_part.sql  timestamps.sql
test/: README.md  dbt-adapter-tests.dbtspec
tests/: conftest.py  dbt-adapter-tests.dbtspec
tests/functional/adapter/: test_basic.py  test_docs_generate.py  test_docs_genreferences.py  test_macros.py  test_seeding.py  test_timestamps.py
tests/functional/adapter/test_data/: test_large_seed.csv
