[tool.poetry]
name = "dbt-ibmdb2"
version = "0.1.1"
description = "The db2 adapter plugin for dbt (data build tool)"
authors = ["aurany <rasmus.nyberg@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/aurany/dbt-ibmdb2"
keywords = [
    "dbt",
    "ibm",
    "db2",
    "data",
    "engineering"
]
packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = "^3.7"
dbt-core = "^0.19"
ibm-db = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-dbt-adapter = {git = "https://github.com/aurany/dbt-adapter-tests.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
