[tool.poetry]
name = "dbt-ibmdb2"
version = "0.1.4"
description = "The db2 adapter plugin for dbt (data build tool)"
authors = ["aurany <rasmus.nyberg@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/aurany/dbt-ibmdb2"
keywords = [
    "dbt",
    "ibm",
    "db2",
    "data",
    "engineering"
]
packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.0.3"
ibm-db = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
#pytest-dbt-adapter = {git = "https://github.com/aurany/dbt-adapter-tests.git"}
pytest-dbt-adapter = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
