[tool.poetry]
name = "dbt-ibmdb2"
version = "1.4.2"
description = "The db2 adapter plugin for dbt (data build tool)"
authors = ["aurany <rasmus.nyberg@gmail.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/aurany/dbt-ibmdb2"
keywords = [
    "dbt",
    "ibm",
    "db2",
    "data",
    "engineering"
]
packages = [
    { include = "dbt" },
]

[tool.poetry.dependencies]
python = ">=3.7.2"
dbt-core = "~1.4"
ibm-db = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
python-dotenv = "^0.20.0"
dbt-tests-adapter = "~1.4"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
